; ModuleID = '/home/carl/AnghaBench/linux/drivers/block/rsxx/extr_dma.c_dma_intr_coal_val.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/block/rsxx/extr_dma.c_dma_intr_coal_val.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@INTR_COAL_LATENCY_UNITS_NS = common dso_local global i64 0, align 8
@RSXX_INTR_COAL_DISABLED = common dso_local global i64 0, align 8
@INTR_COAL_COUNT_SHIFT = common dso_local global i64 0, align 8
@INTR_COAL_COUNT_MASK = common dso_local global i64 0, align 8
@INTR_COAL_LATENCY_MASK = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i64, i64, i64)* @dma_intr_coal_val to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @dma_intr_coal_val(i64 %0, i64 %1, i64 %2) #0 {
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  store i64 %0, i64* %5, align 8
  store i64 %1, i64* %6, align 8
  store i64 %2, i64* %7, align 8
  %9 = load i64, i64* %7, align 8
  %10 = load i64, i64* @INTR_COAL_LATENCY_UNITS_NS, align 8
  %11 = sdiv i64 %9, %10
  store i64 %11, i64* %8, align 8
  %12 = load i64, i64* %5, align 8
  %13 = load i64, i64* @RSXX_INTR_COAL_DISABLED, align 8
  %14 = icmp eq i64 %12, %13
  br i1 %14, label %15, label %16

15:                                               ; preds = %3
  store i64 0, i64* %4, align 8
  br label %26

16:                                               ; preds = %3
  %17 = load i64, i64* %6, align 8
  %18 = load i64, i64* @INTR_COAL_COUNT_SHIFT, align 8
  %19 = shl i64 %17, %18
  %20 = load i64, i64* @INTR_COAL_COUNT_MASK, align 8
  %21 = and i64 %19, %20
  %22 = load i64, i64* %8, align 8
  %23 = load i64, i64* @INTR_COAL_LATENCY_MASK, align 8
  %24 = and i64 %22, %23
  %25 = or i64 %21, %24
  store i64 %25, i64* %4, align 8
  br label %26

26:                                               ; preds = %16, %15
  %27 = load i64, i64* %4, align 8
  ret i64 %27
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
